# factorio-optimizer

./: Cargo.toml
src/: factorio.rs  lib.rs  main.rs  solver.rs
tests/: integration_tests.rs
