[package]
name = "factorio_optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.7"
good_lp = { version = "*", features = ["lp-solvers"], default-features = false }
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
